--- a/app/webroot/css/mapMain.css
+++ b/app/webroot/css/mapMain.css
@@ -8,3 +8,45 @@ html,body,#content
   top: 0;
   width: 100%;
 }
+
+
+#mapHeader
+{
+	background-color:rgba( 10, 10, 10, 0.7);
+	position: absolute;
+	top: 0;
+	width: 80%;
+	margin-left: 10%;
+	margin-right: 10%;
+	padding: 1%;
+	height:8%;
+	z-index: 1;
+}
+
+#buttonGroupLeft, #buttonGroupRight
+{
+	text-align : center;
+	float: left;
+	width:10%;
+	color: white;
+}
+
+
+#sliderSteps
+{
+	color: white;
+}
+
+#sliderCurrentDate, #sliderCurrentDistance
+{
+	text-align : center;
+	color: white;
+	width: 50%;
+	float: left;
+}
+
+#sliderContainer
+{
+	width : 75%;
+	float: left;
+}
